--- a/page4.html
+++ b/page4.html
@@ -24,7 +24,7 @@
     <nav class="w-full py-4 px-10 glass flex justify-between items-center text-[10px] tracking-widest uppercase font-bold sticky top-0 z-50">
         <div class="text-xl italic">Billie Eilish</div>
         <div class="space-x-8">
-            <a href="page1.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="page2.html">Tickets</a>
             <a href="page3.html">Merchandise</a>
             <a href="page4.html" class="underline underline-offset-8 decoration-sky-500 text-sky-400">Media</a>
@@ -113,7 +113,7 @@
 
         <div class="flex gap-4 mb-20 justify-center">
             <a href="page3.html" class="px-10 py-3 rounded-full border border-white/30 uppercase tracking-widest text-[10px] font-bold hover:bg-white/10 transition">Back</a>
-            <a href="page1.html" class="px-10 py-3 rounded-full bg-sky-500 text-white uppercase tracking-widest text-[10px] font-bold hover:bg-sky-400 transition shadow-lg shadow-sky-500/20">Back to Start</a>
+            <a href="index.html" class="px-10 py-3 rounded-full bg-sky-500 text-white uppercase tracking-widest text-[10px] font-bold hover:bg-sky-400 transition shadow-lg shadow-sky-500/20">Back to Start</a>
         </div>
 
         <footer class="text-center">
@@ -125,4 +125,5 @@
         </footer>
     </section>
 </body>
+
 </html>
