--- a/page2.html
+++ b/page2.html
@@ -114,7 +114,7 @@
         <div class="text-xl italic tracking-tighter font-black uppercase">Billie Eilish</div>
         
         <div class="flex space-x-8 text-[10px] tracking-widest uppercase font-bold">
-            <a href="page1.html" class="hover:text-sky-400 transition">Home</a>
+            <a href="index.html" class="hover:text-sky-400 transition">Home</a>
             <a href="#" class="underline underline-offset-8 decoration-sky-500 text-sky-400">Tickets</a>
             <a href="page3.html" class="hover:text-sky-400 transition">Merchandise</a>
             <a href="page4.html" class="hover:text-sky-400 transition">Media</a>
@@ -190,7 +190,7 @@
     </section>
 
     <div class="flex gap-4 justify-center my-20 no-print">
-        <a href="page1.html" class="bg-white/10 border border-white/20 hover:bg-white/20 text-white px-12 py-4 rounded-full font-bold transition uppercase tracking-widest text-xs">BACK</a>
+        <a href="index.html" class="bg-white/10 border border-white/20 hover:bg-white/20 text-white px-12 py-4 rounded-full font-bold transition uppercase tracking-widest text-xs">BACK</a>
         <a href="page3.html" class="bg-sky-500 hover:bg-sky-400 text-white px-12 py-4 rounded-full font-bold transition uppercase tracking-widest text-xs shadow-lg shadow-sky-500/20">NEXT: MERCHANDISE</a>
     </div>
 
@@ -331,4 +331,5 @@
         }
     </script>
 </body>
+
 </html>
