--- a/page3.html
+++ b/page3.html
@@ -26,7 +26,7 @@
     <nav class="w-full py-4 px-10 glass flex justify-between items-center text-[10px] tracking-widest uppercase font-bold sticky top-0 z-50 no-print">
         <div class="text-xl italic">Billie Eilish</div>
         <div class="flex space-x-8">
-            <a href="page1.html" class="hover:text-sky-400 transition">Home</a>
+            <a href="index.html" class="hover:text-sky-400 transition">Home</a>
             <a href="page2.html" class="hover:text-sky-400 transition">Tickets</a>
             <a href="page3.html" class="underline underline-offset-8 decoration-sky-500 text-sky-400">Merchandise</a>
             <a href="page4.html" class="hover:text-sky-400 transition">Media</a>
@@ -175,4 +175,5 @@
         }
     </script>
 </body>
+
 </html>
