--- a/page2.html
+++ b/page2.html
@@ -174,7 +174,18 @@
             </div>
         </div>
     </section>
-
+ <div id="receipt" class="hidden max-w-2xl mx-auto my-10 p-10 glass rounded-3xl border-2 border-sky-500">
+        <h1 class="text-3xl font-black italic text-center mb-4">OFFICIAL RECEIPT</h1>
+        <p class="text-center text-xs tracking-widest opacity-70 mb-8 uppercase">Billie Eilish World Tour Ticket</p>
+        <div class="space-y-3 text-sm">
+            <p><strong>Customer:</strong> <span id="rName"></span></p>
+            <p><strong>Phone:</strong> <span id="rPhone"></span></p>
+            <p><strong>Address:</strong> <span id="rAddress"></span></p>
+            <p><strong>Bank:</strong> <span id="rBank"></span></p>
+            <div class="border-y border-white/20 py-4 my-4">
+                <p><strong>Ticket Ordered:</strong></p>
+                <p id="rItems" class="italic opacity-80 mt-2"></p>
+            </div>
     <section id="ticket-ui" class="hidden py-10 px-6 max-w-5xl mx-auto no-print text-center">
         <div class="mb-10">
             <div class="w-16 h-16 bg-green-500 rounded-full flex items-center justify-center mx-auto mb-4">
@@ -333,3 +344,4 @@
 </body>
 
 </html>
+
