--- a/page2.html
+++ b/page2.html
@@ -69,7 +69,22 @@
             overflow: hidden; 
             border-radius: 20px;
         }
-
+<div id="formSection" class="hidden max-w-lg mx-auto glass p-8 rounded-2xl text-left mb-20">
+            <h3 class="text-xl font-bold mb-6 border-b border-white/20 pb-2">BILLING DETAILS</h3>
+            <div id="cartSummary" class="mb-6 text-sky-400 font-bold uppercase text-xs"></div>
+            <div class="space-y-4">
+                <input type="text" id="name" placeholder="Full Name">
+                <input type="text" id="phone" placeholder="Phone Number">
+                <select id="bank">
+                    <option value="">-- Select Bank --</option>
+                    <option>Maybank</option>
+                    <option>CIMB Bank</option>
+                    <option>Public Bank</option>
+                    <option>RHB Bank</option>
+                    <option>Bank Islam</option>
+                </select>
+                <button onclick="donebooking()" class="bg-sky-500 w-full py-3 rounded-xl font-bold uppercase tracking-widest transition hover:bg-sky-400 shadow-lg shadow-sky-500/20">Complete Purchase</button>
+            </div>
         .concert-ticket {
             width: 100%;
             max-width: 900px;
@@ -180,7 +195,6 @@
         <div class="space-y-3 text-sm">
             <p><strong>Customer:</strong> <span id="rName"></span></p>
             <p><strong>Phone:</strong> <span id="rPhone"></span></p>
-            <p><strong>Address:</strong> <span id="rAddress"></span></p>
             <p><strong>Bank:</strong> <span id="rBank"></span></p>
             <div class="border-y border-white/20 py-4 my-4">
                 <p><strong>Ticket Ordered:</strong></p>
@@ -344,4 +358,5 @@
 </body>
 
 </html>
+
 
